Bug 1702999 - New folder icons not visible in Bookmarks Panel r=mconley,dao a=pascalc
Edited CSS to restore visibility of the folder icon during the creation of a new folder in the Bookmarks Panel.

Differential Revision: https://phabricator.services.mozilla.com/D114164

--- a/toolkit/themes/shared/tree.inc.css
+++ b/toolkit/themes/shared/tree.inc.css
@@ -199,7 +199,8 @@ treechildren::-moz-tree-row(selected, editing) {
   border: none;
 }
 
-treechildren::-moz-tree-cell-text(selected, editing) {
+treechildren::-moz-tree-cell-text(selected, editing),
+treechildren::-moz-tree-image(selected, editing) {
   color: inherit;
 }
 
